style.css
html {
  margin: 0;
  padding: 0;
  height: 100%;
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  background-color: #242526;
  font-size: 19px;
  font-family: 'Roboto', sans-serif;
  height: 100%;
}

#content-start {
  position: absolute;
  bottom: 54px;
}

.content {
  display: grid;
  grid-template-columns:
    1fr
    min(65ch, 100%)
    1fr;
  padding-top: 30px;
  padding-bottom: 50px;
  background-color: #eee;
  max-width: 100%;
}

.content > * {
  grid-column: 2;
}

.content a {
  text-decoration: none;
  color: #0645AD;
}

.content a:hover {
  color: #CFB87C;
}

.full-bleed {
  width: 100%;
  grid-column: 1 / 4;
}

.content .full-bleed {
  margin-top: 30px;
  margin-bottom: 50px;
}

.embedded-image {
  display: block;
  margin: 0 auto;
  width: 80ch;
  max-width: 100%;
  grid-column: 1 / 4;
  margin-bottom: 30px;
}

.small-image {
  display: block;
  margin: 0 auto;
  width: 40ch;
  max-width: 100%;
  grid-column: 1 / 4;
  margin-bottom: 30px;
}

.sponsor-image {
  display: block;
  margin: 0 auto;
  height: 4ch;
  font-size: calc(25px + 1vw);
  max-width: 90%;
  grid-column: 1 / 4;
  margin-bottom: 30px;
}

.nav-spacer {
  height: 54px;
}

.nav {
  width: 100%;
  height: 30px;
  position: fixed;
  float: top;
  background-color: #242526;
  height: 54px;
  z-index: 999;
}

.nav ul {
  list-style-type: none;
  width: 65ch;
  display: block;
  margin: 0 auto;
  padding: 0;
  overflow: hidden;
  background-color: #242526;
}

.nav li {
  float: left;
  font-family: 'Righteous', cursive;
  height: 100%;
}

.nav li a {
  display: block;
  color: white;
  text-align: center;
  text-decoration: none;
  height: 100%;
}

.textlink {
  padding: 14px 16px;
}

.imglink {
  padding: 8px 14px;
}

.imglink img {
  height: 38px;
}

.textlink img {
  position: relative;
  top: 3px;
  margin-right: 6px;
  height: 20px;
}

.nav li a:hover {
  background-color: #000;
  color: #CFB87C;
}

.opener {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.7);
  backdrop-filter: blur(0px);
  user-select: none;
}

.opener-logo {
  display: block;
  margin: 0 auto;
  max-width: 100%;
  text-align: center;
  font-size: calc(35px + 4.5vw);
  color: white;
  font-family: 'Righteous', cursive;
  margin-top: 30vh;
}

.opener-blurb {
  display: block;
  margin: 0 auto;
  max-width: 26ch;
  text-align: center;
  color: #CFB87C;
  font-size: calc(20px + 1.25vw);
  padding: 16px;
  font-family: 'Righteous', cursive;
  text-shadow: 0px 0px 5px #000;
}

.parallax {
  /* Full height */
  height: 100%;
  width: 100%;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  overflow: hidden;
  pointer-events:none;
}

.parallax video {
  margin-top: 54px;
  min-height: 100%;
  min-width: 100%;
}

.socials {
  display: block;
  margin: 0 auto;
  text-align: center;
  width: 260px;
  max-width: 50%;
  height: 70px;
  transform: skew(-20deg);
  background-color: #242526;
  border-color: #fff;
  border-style: solid;
  border-width: 4px;
  border-radius: 5px;
}

.social-icon {
  max-width: 50px;
  transform: skew(20deg);
  margin: 10px;
}

.scroll-down-container {
  position: absolute;
  bottom: 5%;
  animation: bounce 4s infinite;
  width: 100%;
  text-align: center;
  z-index: 100;
}

.scroll-down-container img {
  width: 100px;
  padding: 30px;
}

@keyframes bounce {
  0% { bottom: 60px; }
  50% { bottom: 30px; }
  100% { bottom: 60px; }
}

.header {
  font-size: 38px;
  font-weight: bold;
  margin: 30px 0px;
  text-align: center;
  font-family: 'Righteous', cursive;
}

.text-body {
  font-size: 19px;
  margin-bottom: 22px;
  padding: 10px;
}

.discord {
  color: #7289da;
  font-size: 30px;
  margin-top: 22px;
  font-family: 'Righteous', cursive;
  text-align: center;
}

.discord a {
  color: #7289da
}

.footer {
  padding: 30px 50px;
  background-color: #242526;
  color: white;
  font-size: 19px;
}

.footer a {
  color: lightskyblue;
}

.gold {
  color: #CFB87C;
}

